gac_sb/objects/AppCIRmission__c.object
<CustomObject>
    <description>APPLICATION CIR - Les missions CIR d&apos;un client</description>
    <fields>
        <fullName>Annee_CIR__c</fullName>
        <label>Année CIR</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppCIRcqInnoAdvance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrôle Qualité INNO advance</label>
        <referenceTo>AppCIRcqInnoAdvance__c</referenceTo>
        <relationshipName>Missions_CIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approbateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approbateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions_CIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditeurs_financiers__c</fullName>
        <label>Auditeurs financiers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avancement_Audit__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Audit__c == 0, 0, Nombre_jours_travailles_Audit__c / Nombre_jours_theoriques_Audit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Audit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Controle__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Controle__c == 0, 0, Nombre_jours_travailles_Controle__c / Nombre_jours_theoriques_Controle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Contrôle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Justification__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Justification__c == 0, 0, Nombre_jours_travailles_Justification__c / Nombre_jours_theoriques_Justification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Justif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement_Valorisation__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Valorisation__c == 0, 0, Nombre_jours_travailles_Valorisation__c / Nombre_jours_theoriques_Valorisation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement - Valo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avancement__c</fullName>
        <formula>IF(Nombre_jours_theoriques_Total__c == 0, 0, Nombre_jours_travailles_total__c / Nombre_jours_theoriques_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CII__c</fullName>
        <formula>CONTAINS(Name, &apos;CII -&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CII</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commentaires_DT__c</fullName>
        <label>Commentaires sur les DT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_amortissementBrevet__c</fullName>
        <label>Commentaires sur les DA de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_amortissement__c</fullName>
        <label>Commentaires sur les DA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_avanceRemboursable__c</fullName>
        <label>Commentaires sur les avances remb.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetAssu__c</fullName>
        <label>Commentaires sur les assu. de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetDef__c</fullName>
        <label>Commentaires sur défenses de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_brevetPM__c</fullName>
        <label>Commentaires sur les PM de brevets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_jeuneDocteur__c</fullName>
        <label>Commentaires sur les jeunes docteurs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_miseDisposition__c</fullName>
        <label>Commentaires sur les mises à disposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_normalisation__c</fullName>
        <label>Commentaires sur normalisations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_prestataire__c</fullName>
        <label>Commentaires sur les prestataires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_projet__c</fullName>
        <label>Commentaires sur les projets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_remboursementAvance__c</fullName>
        <label>Commentaires sur les remb. avances</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_salarie__c</fullName>
        <label>Commentaires sur les salariés</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_subvention__c</fullName>
        <label>Commentaires sur les subventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaires_veille__c</fullName>
        <label>Commentaires sur veilles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MissionsCIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultants_exterieurs__c</fullName>
        <label>Consultants exterieurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_fiscalistes__c</fullName>
        <label>Consultants fiscalistes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultants_scientifiques__c</fullName>
        <label>Consultants scientifiques</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Estime__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
(Nombre_jours_programmes_Consultant__c + Nombre_jours_travailles_Consultant__c) * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
(Nombre_jours_programmes_Consultant_RO__c + Nombre_jours_travailles_Consultant_RO__c) * Cout_standard_INNO_advance__r.Cout_standard_Consultant_RO__c + 
(Nombre_jours_programmes_Superviseur__c + Nombre_jours_travailles_Superviseur__c) * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
(Nombre_jours_programmes_Manager__c + Nombre_jours_travailles_Manager__c) * Cout_standard_INNO_advance__r.Cout_standard_Manager__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Estimé)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Reelle__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
Nombre_jours_travailles_Consultant__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
Nombre_jours_travailles_Consultant_RO__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant_RO__c + 
Nombre_jours_travailles_Superviseur__c * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
Nombre_jours_travailles_Manager__c * Cout_standard_INNO_advance__r.Cout_standard_Manager__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Réelle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_mission_Theorique__c</fullName>
        <formula>IF(ISBLANK(Cout_standard_INNO_advance__c), 
null, 
Nombre_jours_theoriques_Consultant__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant__c + 
Nombre_jours_theoriques_Consultant_RO__c * Cout_standard_INNO_advance__r.Cout_standard_Consultant_RO__c + 
Nombre_jours_theoriques_Superviseur__c * Cout_standard_INNO_advance__r.Cout_standard_Superviseur__c + 
Nombre_jours_theoriques_Manager__c * Cout_standard_INNO_advance__r.Cout_standard_Manager__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de la mission (Théorique)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_INNO_advance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coût standard INNO advance</label>
        <referenceTo>AppCIRcoutStandard__c</referenceTo>
        <relationshipName>Missions_CIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DT_soumis_a_facturation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT soumis à facturation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Initiale_echeance_DT__c</fullName>
        <label>Date Initiale Échéance DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_approbation__c</fullName>
        <label>Date d&apos;approbation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_collecte_info_DT__c</fullName>
        <label>Date collecte info DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_Audit__c</fullName>
        <label>Date début Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_agrement__c</fullName>
        <label>Date de début d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_justification__c</fullName>
        <label>Date début justification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_valorisation__c</fullName>
        <label>Date début valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_CERFA__c</fullName>
        <label>Date d&apos;échéance CERFA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_CF__c</fullName>
        <label>Date d&apos;échéance CF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_DT__c</fullName>
        <label>Date d&apos;échéance DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_estimations__c</fullName>
        <label>Date d&apos;échéance estimations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_validation_perimetre__c</fullName>
        <label>Date d&apos;échéance validation périmètre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_echeance_valorisation__c</fullName>
        <label>Date d&apos;échéance valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_envoi_valorisation__c</fullName>
        <label>Date d&apos;envoi valorisation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_facturation_GAC__c</fullName>
        <label>Date facturation GAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_agrement__c</fullName>
        <label>Date de fin d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_lancement_mission__c</fullName>
        <label>Date de lancement de mission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reception_doc_DT__c</fullName>
        <label>Date réception doc DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reception_doc_fin__c</fullName>
        <label>Date réception doc fin.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_CERFA__c</fullName>
        <label>Date de rendu CERFA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_DT__c</fullName>
        <label>Date de rendu DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_rendu_estimations__c</fullName>
        <label>Date de rendu estimations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_soumission__c</fullName>
        <label>Date soumission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_validation_DT_par_client__c</fullName>
        <label>Date de validation DT par le client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_validation_perimetre__c</fullName>
        <label>Date de validation de périmètre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_validation_valo_par_client__c</fullName>
        <label>Date de validation valo par le client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demande_de_remboursement_anticipe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PME au sens communautaire</inlineHelpText>
        <label>Demande de remboursement anticipé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_amortissementBrevet__c</fullName>
        <label>Dossier serveur DA de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_amortissement__c</fullName>
        <label>Dossier serveur DA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_avanceRemboursable__c</fullName>
        <label>Dossier serveur avances remb.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetAssu__c</fullName>
        <label>Dossier serveur assu. de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetDef__c</fullName>
        <label>Dossier serveur défenses de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_brevetPM__c</fullName>
        <label>Dossier serveur PM de brevets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_jeuneDocteur__c</fullName>
        <label>Dossier serveur jeunes docteurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_miseDisposition__c</fullName>
        <label>Dossier serveur mises à disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_normalisation__c</fullName>
        <label>Dossier serveur normalisations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_prestataire__c</fullName>
        <label>Dossier serveur prestataires</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_projet__c</fullName>
        <label>Dossier serveur projets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_remboursementAvance__c</fullName>
        <label>Dossier serveur remb. avances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_salarie__c</fullName>
        <label>Dossier serveur salariés</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_subvention__c</fullName>
        <label>Dossier serveur subventions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dossier_serveur_veille__c</fullName>
        <label>Dossier serveur veilles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entité</label>
        <referenceTo>AppCIRentite__c</referenceTo>
        <relationshipName>Missions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etat_CF__c</fullName>
        <label>Etat CF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_DT__c</fullName>
        <label>Etat DT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En validation</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_info_fin_recue__c</fullName>
        <label>Etat info fin. reçue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_info_recue_DT__c</fullName>
        <label>Etat info reçue DT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A lancer</fullName>
                    <default>true</default>
                    <label>A lancer</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Besoin compléments</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_remboursement__c</fullName>
        <label>Etat du remboursement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En attente</fullName>
                </value>
                <value>
                    <fullName>Effectué</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etat_valorisation__c</fullName>
        <label>Etat valorisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A faire</fullName>
                    <default>true</default>
                    <label>A faire</label>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>En validation</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option1__c</fullName>
        <label>Honoraires N-1 à déduire option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option2__c</fullName>
        <label>Honoraires N-1 à déduire option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_option3__c</fullName>
        <label>Honoraires N-1 à déduire option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N1_a_deduire_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_honoraires_N1__c,1,Honoraires_N1_a_deduire_option1__c,2,Honoraires_N1_a_deduire_option2__c,3,Honoraires_N1_a_deduire_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Honoraires N-1 à déduire option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_N_a_deduire_optionFinaleManue__c</fullName>
        <label>Honoraires N à déduire option ret manuel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honoraires_en_jeux__c</fullName>
        <label>Honoraires en jeux</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <label>Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobilisation_creance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobilisation de créance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option1__c</fullName>
        <formula>Montant_total_depenses_option1__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N  (base de calcul) option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option2__c</fullName>
        <formula>Montant_total_depenses_option2__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N  (base de calcul) option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_option3__c</fullName>
        <formula>Montant_total_depenses_option3__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N  (base de calcul) option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_N_base_optionFinale__c</fullName>
        <formula>Montant_total_depenses_optionFinale__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR N (base de calcul) opt reten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option1__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option1__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option2__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option2__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_option3__c</fullName>
        <formula>Montant_total_dep_apres_dedu_option3__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant du CIR définitif option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_optionFinale__c</fullName>
        <formula>Montant_total_dep_apres_dedu_optionFinal__c * Taux_CIR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR définitif retenu(après dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_remuneration_final__c</fullName>
        <label>Chiffre d&apos;affaire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option1__c</fullName>
        <formula>Montant_total_depenses_option1__c - Honoraires_N_a_deduire_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option2__c</fullName>
        <formula>Montant_total_depenses_option2__c - Honoraires_N_a_deduire_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_option3__c</fullName>
        <formula>Montant_total_depenses_option3__c - Honoraires_N_a_deduire_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_dep_apres_dedu_optionFinal__c</fullName>
        <formula>Montant_total_depenses_optionFinale__c - Honoraires_N_a_deduire_optionFinaleManue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total dép. après dédu. opt reten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option1__c</fullName>
        <formula>Total_salarie_option1__c + 
Total_miseDisposition_option1__c +
Total_jeuneDocteur_option1__c +
Total_amortissement_option1__c +
Total_frais_fonctionnement_option1__c +
Total_brevetPM_option1__c +
Total_brevetDef_option1__c +
Total_amortissementBrevet_option1__c +
Total_brevetAssu_option1__c +
Total_normalisation_option1__c +
Total_veille_option1__c +
Total_prestataire_option1__c +
Total_remboursementAvance_option1__c -
Total_subvention_option1__c -
Total_avanceRemboursable_option1__c -
Honoraires_N1_a_deduire_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option2__c</fullName>
        <formula>Total_salarie_option2__c + 
Total_miseDisposition_option2__c +
Total_jeuneDocteur_option2__c +
Total_amortissement_option2__c +
Total_frais_fonctionnement_option2__c +
Total_brevetPM_option2__c +
Total_brevetDef_option2__c +
Total_amortissementBrevet_option2__c +
Total_brevetAssu_option2__c +
Total_normalisation_option2__c +
Total_veille_option2__c +
Total_prestataire_option2__c +
Total_remboursementAvance_option2__c -
Total_subvention_option2__c -
Total_avanceRemboursable_option2__c -
Honoraires_N1_a_deduire_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_option3__c</fullName>
        <formula>Total_salarie_option3__c + 
Total_miseDisposition_option3__c +
Total_jeuneDocteur_option3__c +
Total_amortissement_option3__c +
Total_frais_fonctionnement_option3__c +
Total_brevetPM_option3__c +
Total_brevetDef_option3__c +
Total_amortissementBrevet_option3__c +
Total_brevetAssu_option3__c +
Total_normalisation_option3__c +
Total_veille_option3__c +
Total_prestataire_option3__c +
Total_remboursementAvance_option3__c -
Total_subvention_option3__c -
Total_avanceRemboursable_option3__c -
Honoraires_N1_a_deduire_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total des dépenses option 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_optionFinale__c</fullName>
        <description>ATTENTION : mis à jour par workflow car dépassement de la taille max des formules</description>
        <label>Montant total dép. retenu (avant dédu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_depenses_optionFinale_old__c</fullName>
        <formula>Total_salarie_optionFinale__c + 
Total_miseDisposition_optionFinale__c +
Total_jeuneDocteur_optionFinale__c +
Total_amortissement_optionFinale__c +
Total_frais_fonctionnement_optionFinale__c +
Total_brevetPM_optionFinale__c +
Total_brevetDef_optionFinale__c +
Total_amortissementBrevet_optionFinale__c +
Total_brevetAssu_optionFinale__c +
Total_normalisation_optionFinale__c +
Total_veille_optionFinale__c +
Total_prestataire_agree_optionFinale__c +
Total_prestataire_public_optionFinale__c +
Total_remboursementAvance_optionFinale__c -
Total_subvention_optionFinale__c -
Total_avanceRemboursable_optionFinale__c</formula>
        <label>Montant total des dépenses retenu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NomOpportunite__c</fullName>
        <formula>Entite__r.Contrat__r.Opportunite__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom de l&apos;opportunité</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_brigade__c</fullName>
        <label>Nom de la brigade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Audit__c</fullName>
        <label>Nombre de jours programmés - Audit</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Audit__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Consultant_RO__c</fullName>
        <label>Nombre de jours programmés-Consultant RO</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique RO</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Consultant__c</fullName>
        <label>Nombre de jours programmés - Consultant</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AppCIRequipeConsulting__c.Role__c</field>
            <operation>equals</operation>
            <value>Consultant scientifique, Consultant fiscaliste, Consultant extérieur, Auditeur Financier</value>
        </summaryFilterItems>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_jours_programmes_Controle__c</fullName>
        <label>Nombre de jours programmés - Contrôle</label>
        <summarizedField>AppCIRequipeConsulting__c.Nombre_jours_programmes_Controle__c</summarizedField>
        <summaryForeignKey>AppCIRequipeConsulting__c.Mission_CIR__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>